@@ -358,3 +358,5 @@
 0.3.11 2008-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
 	* Add support for recursive mutexes.
+	* BUGFIX:  Eliminate a memory leak -- contained watchdog instance was not
+	  being deleted with a POSIX timer was deleted.
